Fixed some few paddings, center aligning, margins

--- a/client/src/styles/Portfolio.css
+++ b/client/src/styles/Portfolio.css
@@ -9,14 +9,13 @@ h1{
   
 .mytable {
     font-family: "Courier New", monospace;
-    border-collapse: collapse;
-    width: 100%;
-    margin-bottom: 50px;
-    width: "100vw"
+    width:90%; 
+    margin-left:auto;
+    margin-right:auto;
 }
-  
-.mytable td,
-#mytable th {
+
+
+.mytable td{
     border: 2px solid #ddd;
     padding: 8px;
     text-align: center;
@@ -26,6 +25,7 @@ h1{
     padding-top: 12px;
     padding-bottom: 12px;
     padding-left: 5px;
+    padding-right: 5px;
     text-align: center;
     background-color: #2E2B2C;
     color: white;
